--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "aw-webui"]
 	path = aw-webui
-	url = https://github.com/ActivityWatch/aw-webui.git
+	url = https://github.com/jaskarannagi19/aw-webui
+	branch = master
